# markupever

./: 404.html  Cargo.toml  Makefile  README.md  index.html  main.py  pyproject.toml  sitemap.xml
.github/workflows/: CI.yml  deploy.yml  publish.yml  test.yml
docs/: mkdocs.yml
docs/docs/: index.md  more-examples.md  parser.md  querying.md  treedom.md
matching/: Cargo.toml
matching/src/: _impl.rs  element.rs  lib.rs  parser.rs  selectable.rs
more-examples/: index.html
parser/: index.html
python/markupever/: dom.py  parser.py
python/tests/: test__rustlib.py  test_all.py  test_dom.py  test_driver.py  test_parser.py  test_rustlib.py
python/xmarkup/: __init__.py  _rustlib.pyi  dom.py  driver.py  iterators.py  node.py  nodes.py  parser.py  tree.py
querying/: index.html
reference/: index.html
search/: search_index.json
src/: builder.rs  iter.rs  lib.rs  nodes.rs  parser.rs  qualname.rs  select.rs  send.rs  tools.rs  tree.rs
src/bridge/: builder.rs  docdata.rs  elementdata.rs  mod.rs  node.rs  qualname.rs
src/core/: mod.rs  nodes.rs  parser.rs  qualname.rs  send.rs  tree.rs
src/core/arcdom/: iter.rs  mod.rs  node.rs  tree.rs  treesink.rs
src/core/matching/: _impl.rs  errors.rs  mod.rs  parser.rs
src/dom/: data.rs  dom.rs  mod.rs  nodes.rs  parser.rs  qualname.rs  tree.rs  treedom.rs
src/iter/: iterator.rs  mod.rs  traverse.rs
treedom/: Cargo.toml  index.html
treedom/src/: atomic.rs  data.rs  dom.rs  interface.rs  lib.rs  parser.rs  treedom.rs
unitree/: Cargo.toml  lib.rs
unitree/src/: lib.rs
