[package]
name = "xmarkup"
description = "The fast, most optimal, and correct HTML & XML parsing library."
version.workspace = true
edition.workspace = true
readme.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true

[workspace.package]
version = "0.1.0-beta.2"
edition = "2021"
readme = "README.md"
license = "MIT"
homepage = "https://github.com/awolverp/xmarkup"
repository = "https://github.com/awolverp/xmarkup.git"
authors = [
    "awolverp"
]

[lib]
name = "xmarkup"
crate-type = ["cdylib"]

[workspace]
members = [ "unitree" ]

[profile.release]
codegen-units = 1
debug = false
# incremental = false
lto = "fat"
panic = "abort"
strip = "symbols"

[dependencies]
hashbrown = { version = "0.15", default-features = false, features = ["default-hasher", "inline-more"]}
html5ever = "0.29.0"
markup5ever = { version = "0.14" }
parking_lot = { version = "0.12" }
pyo3 = { version = "0.23", default-features = false, features = ["macros", "extension-module"] }
tendril = { version = "^0.4" }
unitree = { path = "unitree" }
xml5ever = "0.20.0"

[build-dependencies]
pyo3-build-config = { version = "0.23", features = ["resolve-config"] }

[lints.clippy]
dbg_macro = "warn"
print_stdout = "warn"
