[package]
name = "xmarkup"
description = "The fast, most optimal, and correct HTML & XML parsing library."
version.workspace = true
edition.workspace = true
readme.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true

[lib]
name = "xmarkup"
crate-type = ["cdylib"]

[workspace]
members = ["treedom", "matching"]

[workspace.package]
version = "0.1.0-beta.2"
edition = "2021"
readme = "README.md"
license = "MIT"
homepage = "https://github.com/awolverp/xmarkup"
repository = "https://github.com/awolverp/xmarkup.git"
authors = ["awolverp"]

[profile.release]
codegen-units = 1
debug = false
# incremental = false
lto = "fat"
panic = "abort"
strip = "symbols"

[dependencies]
pyo3 = { version = "0.23", default-features = false, features = [
    "macros",
    "extension-module",
] }
treedom = { path = "treedom" }
matching = { path = "matching" }

[build-dependencies]
pyo3-build-config = { version = "0.23", features = ["resolve-config"] }

[lints.clippy]
dbg_macro = "warn"
print_stdout = "warn"
