[package]
name = "matching"
description = "matching implementation which supports selectors crate for treedom crate (optimized for xmarkup library)."
version.workspace = true
edition.workspace = true
readme.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
cssparser = { version = "0.34.0" }
precomputed-hash = { version = "0.1.1" }
selectors = { version = "0.26.0" }
tendril = { version = "0.4" }
treedom = { path = "../treedom", default-features = false, features = ["html5ever", "xml5ever"]}
hashbrown = { version = "0.15", optional = true, default-features = false, features = [
    "default-hasher",
    "inline-more",
] }

[features]
default = ["hashbrown"]

hashbrown = ["treedom/hashbrown", "dep:hashbrown"]
