[package]
name = "matching"
description = "matching implementation which supports selectors crate for treedom crate (optimized for markupever library)."
version.workspace = true
edition.workspace = true
readme.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
cssparser = { version = "0.36.0" }
precomputed-hash = { version = "0.1.1" }
selectors = { version = "0.35.0" }
tendril = { version = "0.5" }
treedom = { path = "../treedom"}
hashbrown = { version = "0.16", default-features = false, features = [
    "default-hasher",
    "inline-more",
] }

[features]
default = []
