[package]
name = "treedom"
description = "A TreeDom based on unitree crate and supports markup5ever (optimized for xmarkup library)."
version.workspace = true
edition.workspace = true
readme.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
html5ever ={version = "0.29.0", optional = true}
markup5ever = { version = "0.14" }
parking_lot = { version = "0.12" }
xml5ever = {version = "0.20.0", optional = true}
tendril = { version = "^0.4" }
hashbrown = { version = "0.15", optional = true, default-features = false, features = ["default-hasher", "inline-more"]}
unitree = { path = "../unitree" }

[features]
default = ["html5ever", "xml5ever", "hashbrown"]

html5ever = ["dep:html5ever"]
xml5ever = ["dep:xml5ever"]
hashbrown = ["dep:hashbrown"]
