[package]
name = "treedom"
description = "A TreeDom based on ego-tree crate and supports markup5ever (optimized for markupever library)."
version.workspace = true
edition.workspace = true
readme.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
html5ever = { version = "0.38.0", optional = true }
markup5ever = { version = "0.38.0" }
parking_lot = { version = "0.12" }
xml5ever = { version = "0.38.0", optional = true }
tendril = { version = "^0.5" }
hashbrown = { version = "0.16", default-features = false}
ego-tree = { version = "0.11.0" }

[features]
default = ["html5ever", "xml5ever"]

html5ever = ["dep:html5ever"]
xml5ever = ["dep:xml5ever"]
